--- a/index.html
+++ b/index.html
@@ -6,17 +6,89 @@
   <title>Learn - Get Started Today</title>
   <meta name="description" content="Learn is a platform that offers free courses for everyone. Start learning today!" />
   <!-- CSS -->
-  <link rel="stylesheet" href="./css/main.css" />
+  <link rel="stylesheet" href="./main.css" />
 </head>
 
 <body>
   <!-- Navbar section -->
+  <nav class="navbar">
+    <div class="navbar-logo">
+      <img src="./images/logo.png" width="300" />
+    </div>
+    <ul class="navbar-items">
+      <li>About Me</li>
+      <li>Journey</li>
+      <li>Goals</li>
+    </ul>
+  </nav>
 
   <!-- Hero section -->
+   <div class="hero">
+  <h1>
+    Hello! <br />
+    I'm joshua Billy ishimwe 
+  </h1>
+  <p>A web developer</p>
+  <a href="mailto:billyjoshuaishimwe@gmail.com">
+    <button>Contact Me</button>
+  </a>
+><div>
+  <h2>About me </h2>
+  <p>Hi, I'm Joshua Billy Ishimwe.
+    I'm a software engineering student who loves learning and building new things. I believe in hard work, faith, and never giving up. After losing my mom, I made it my goal to succeed and make her proud.
+    Right now, I'm focused on growing my tech skills and becoming the best version of myself.
+    Let's connect if you're on a similar journey </p>
+</div>
 
   <!-- Coding journey section -->
+  <div id="coding-journey" class="journey">
+    <h2>Coding Journey</h2>
+  
+    <div class="journey-list">
+      <div id="intro" class="journey-card">
+        <img
+          src="/images/intro-to-web.png"
+          class="journey-image"
+          alt="Course Image"
+        />
+        <div>
+          <h3>Intro To Web Development</h3>
+          <p>
+            Learned how to build <br />Web Html Projects
+          </p>
+        </div>
+      </div>
+  
+      <div id="react" class="journey-card">
+        <img src="/images/react.png" class="journey-image" alt="Course Image" />
+        <div>
+          <h3>React Development</h3>
+          <p>
+            Learned how to build <br />Single Page Application
+          </p>
+        </div>
+      </div>
+  
+      <div id="backend" class="journey-card">
+        <img src="/images/backend.png" class="journey-image" alt="Course Image" />
+        <div>
+          <h3>Back-end Development</h3>
+          <p>
+            Learned how to build <br />Back-end services
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div> 
+    <h2> my Goals</h2>
+    <p>I aspire to mentor and support other aspiring developers, sharing the knowledge and experience I’ve gained along the way. By fostering a collaborative and encouraging environment, I hope to help others achieve their own goals and grow in their careers. Building strong, supportive communities is important to me, as I believe we can achieve more together. </p>
+  </div>
 
   <!-- Footer section -->
+  <footer>
+    <p>Website Made By Joshua Billy ishimwe</p>
+  </footer>
 
   <script src="./script.js"></script>
 </body>
